load("@gazelle//:def.bzl", "gazelle")
load("@rules_go//go:def.bzl", "go_binary", "go_library")

# gazelle:prefix github.com/johanastborg/glitch-mesh-go
gazelle(name = "gazelle")

go_library(
    name = "glitch-mesh-go_lib",
    srcs = ["main.go"],
    importpath = "github.com/johanastborg/glitch-mesh-go",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "glitch-mesh-go",
    embed = [":glitch-mesh-go_lib"],
    visibility = ["//visibility:public"],
)
